Added workaround for Selenium testing with newer versions of Java.